2011-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Change of group password enforces gshadow
	password. Set /etc/group password to "x".

2011-11-16  Peter Vrabec  <pvrabec@redhat.com>

	* NEWS, src/userdel.c, man/userdel.8.xml: Add option -Z/--selinux-user.
	* libmisc/system.c, lib/prototypes.h, libmisc/Makefile.am: Removed
	safe_system().
	* lib/selinux.c, po/POTFILES.in, lib/prototypes.h,
	lib/Makefile.am: Added helper functions for semanage.
	* NEWS, README, src/useradd.c, src/usermod.c, src/userdel.c,
	configure.in: Use libsemanage instead of semanage.

2011-11-16  Peter Vrabec  <pvrabec@redhat.com>

	* src/Makefile.am: useradd may need the LIBATTR library.

2011-11-16  Peter Vrabec  <pvrabec@redhat.com>

	* libmisc/copydir.c: Ignore perm_copy_file() errors with errno set
	to ENOTSUP.

2011-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Compilation fix when SHADOWGRP is not enabled.
	* libmisc/root_flag.c: Add missing #include <stdio.h>

2011-11-13  Nicolas François  <nicolas.francois@centraliens.net>

	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2011-11-12  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c, src/chfn.c, src/chgpasswd.c, src/chpasswd.c,
	src/chsh.c, src/groupadd.c, src/groupdel.c, src/groupmems.c,
	src/groupmod.c, src/newusers.c, src/useradd.c, src/userdel.c,
	src/usermod.c: Provide the PAM error
	message instead of our own, and log error to syslog.
	* src/groupmems.c: Exit with exit rather than fail_exit in usage().
	* src/newusers.c: Check the number of arguments.
	* src/newusers.c: Do not create the home directory when it is not
	changed.
	* src/useradd.c: Set the group password to "!" rather "x" if there
	are no gshadow file.

2011-11-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Removed pw_opened.
	* src/pwck.c: optind cannot be greater than argc.