@@ -37,5 +37,9 @@
       <command>useradd</command>, <command>groupadd</command>, or
       <command>newusers</command>.
     </para>
+    <para>
+      The default value for <option>GID_MIN</option> (resp.
+      <option>GID_MAX</option>) is 1000 (resp. 60000).
+    </para>
   </listitem>
 </varlistentry>
