@@ -35,5 +35,9 @@
       <command>useradd</command>, <command>groupadd</command>, or
       <command>newusers</command>.
     </para>
+    <para>
+      The default value for <option>SYS_GID_MIN</option> (resp.
+      <option>SYS_GID_MAX</option>) is 101 (resp. <option>GID_MIN</option>-1).
+    </para>
   </listitem>
 </varlistentry>
