@@ -36,5 +36,9 @@
       Range of user IDs used for the creation of regular users by
       <command>useradd</command> or <command>newusers</command>.
     </para>
+    <para>
+      The default value for <option>UID_MIN</option> (resp.
+      <option>UID_MAX</option>) is 1000 (resp. 60000).
+    </para>
   </listitem>
 </varlistentry>
