@@ -472,8 +472,12 @@
 	    The numerical value of the user's ID. This value must be unique,
 	    unless the <option>-o</option> option is used. The value must be
 	    non-negative. The default is to use the smallest ID value
-	    greater than 999 and greater than every other user. Values
-	    between 0 and 999 are typically reserved for system accounts.
+	    greater than or equal to <option>UID_MIN</option> and greater
+	    than every other user.
+	  </para>
+	  <para>
+	    See also the <option>-r</option> option and the
+	    <option>UID_MAX</option> description.
 	  </para>
 	</listitem>
       </varlistentry>
