@@ -331,8 +331,7 @@
 	  <para>
 	    This value must be unique,
 	    unless the <option>-o</option> option is used. The value must be
-	    non-negative. Values between 0 and 999 are typically reserved
-	    for system accounts.
+	    non-negative.
 	  </para>
 	  <para>
 	    The user's mailbox, and any files which the user owns and which are
@@ -342,6 +341,12 @@
 	  <para>
 	    The ownership of files outside of the user's home directory
 	    must be fixed manually.
+	  </para>
+	  <para>
+	    No checks will be performed with regard to the
+	    <option>UID_MIN</option>, <option>UID_MAX</option>,
+	    <option>SYS_UID_MIN</option>, or <option>SYS_UID_MAX</option>
+	    from <filename>/etc/login.defs</filename>.
 	  </para>
 	</listitem>
       </varlistentry>
@@ -428,6 +433,12 @@
 	<term><filename>/etc/gshadow</filename></term>
 	<listitem>
 	  <para>Secure group account information.</para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><filename>/etc/login.defs</filename></term>
+	<listitem>
+	  <para>Shadow password suite configuration.</para>
 	</listitem>
       </varlistentry>
       <varlistentry>
